# weekly-report-assistant

./: .eslintrc.js  .gitignore  .versionrc.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  UPDATER_SETUP.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  weekly-report-assistant.pub
.github/workflows/: main.yml  release.yml
scripts/: README.md  cargo-version-updater.js  update-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/database/: sqlite.rs
src/components/: AuthorTag.tsx  DynamicTag.tsx  UpdateManager.tsx
src/hooks/: useAuthor.ts  useUpdater.ts
src/layouts/: index.tsx
src/router/: index.tsx
src/services/: projectConfig.ts  report.ts  settings.ts  updater.ts  weeklyReport.ts
src/types/: db.d.ts  global.d.ts
src/utils/: constants.ts  db.ts  request.ts  transform.ts  utils.ts
src/utils/__tests__/: utils.test.ts
src/views/: history.tsx  home.tsx  projects.tsx  settings.tsx
